@@ -1,5 +1,11 @@
 2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>
 
+	* TabStrip.cs: de-coupled TabStrip from Styles.cs
+
+	* gtkrc: added style assignment for TabStrip
+
+2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>
+
 	* gtkrc: testing git config for easier pushes
 
 2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>
